[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/eWalker.gd" type="Script" id=1]
[ext_resource path="res://scenes/projectiles/pBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/ground_sprites/walker/walker_00.png" type="Texture" id=3]
[ext_resource path="res://sprites/ground_sprites/walker/walker_01.png" type="Texture" id=4]
[ext_resource path="res://sprites/ground_sprites/walker/walker_02.png" type="Texture" id=5]
[ext_resource path="res://sprites/ground_sprites/walker/walker_03.png" type="Texture" id=6]
[ext_resource path="res://sprites/ground_sprites/walker/walker_04.png" type="Texture" id=7]
[ext_resource path="res://sprites/ground_sprites/walker/walker_05.png" type="Texture" id=8]
[ext_resource path="res://sprites/ground_sprites/walker/walker_06.png" type="Texture" id=9]
[ext_resource path="res://sprites/ground_sprites/walker/walker_07.png" type="Texture" id=10]
[ext_resource path="res://sprites/ground_sprites/walker/walker_08.png" type="Texture" id=11]
[ext_resource path="res://sfx/Howitzer,M101,C3,105 mm,Distant,Right Side,Shot,Explode,Crack,Sweetener.wav" type="AudioStream" id=12]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 289.772

[node name="Walker" type="KinematicBody2D"]
script = ExtResource( 1 )
projectile = ExtResource( 2 )
HP = 1

[node name="Anim" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"
frame = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -16, -16 )
polygon = PoolVector2Array( 12, 4, 18, 2, 22, 2, 24, 4, 26, 0, 30, 0, 32, 2, 30, 14, 30, 22, 20, 32, 8, 32, 18, 20, 10, 12, 10, 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Detection" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="shoot" type="Position2D" parent="."]
position = Vector2( -2, -6 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
